--- a/views/device.ejs
+++ b/views/device.ejs
@@ -2,24 +2,18 @@
 
     <div class="container">
         <%- include('partials/menu'); %>
-        
+
         <div class="row mt-5">
             <div class="col-md-2"></div>
             <div class="col-md-8 mt-3">
                 <div class="card shadow mb-5 bg-body rounded">
                     <div class="card-header">
-                        Add new administrator
+                        Add new device
                     </div>
                     <div class="card-body">
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="email@example.com">
-
-                            <label for="email" class="form-label mt-3">Business</label>
-                            <select class="form-select" id="business" aria-label="Business">
-                                <option selected>Select business</option>
-                                <option value="1">One</option>
-                            </select>
+                            <label for="device-address" class="form-label">Device address</label>
+                            <input type="text" class="form-control" id="device-address" placeholder="0xD8a12aBa14...">
                         </div>
 
                         <a href="#" class="btn btn-primary">Add</a>
