--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,42 @@
 <%- include('partials/header'); %>
 
-    <div class="container">
-        <%- include('partials/menu'); %>
-        
-        <div class="row mt-5">
+<div class="container">
+    <%- include('partials/menu'); %>
+
+        <div class="row mt-3">
             <div class="col-md-2"></div>
-            <div class="col-md-8 mt-3">
-                <div class="card shadow mb-5 bg-body rounded">
+            <div class="col-md-8">
+                <div id="status-bar" class="alert invisible" role="alert"></div>
+
+                <div class="card shadow bg-body rounded">
                     <div class="card-header">
                         Add new administrator
                     </div>
                     <div class="card-body">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="email@example.com">
+                            <input type="email" required class="form-control" id="email"
+                                placeholder="email@example.com">
 
                             <label for="email" class="form-label mt-3">Business</label>
                             <select class="form-select" id="business" aria-label="Business">
                                 <option selected>Select business</option>
-                                <option value="1">One</option>
+
+                                <% businesses.forEach(function(business) { %>
+                                    <option value="<%= business.id %>"><%= business.title %></option>
+                                <% }); %>
                             </select>
                         </div>
 
-                        <a href="#" class="btn btn-primary">Add</a>
+                        <button id="add-admin-btn" class="btn btn-primary" type="button">
+                            <span class="spinner-grow spinner-grow-sm d-none" role="status"
+                                aria-hidden="true"></span>
+                            <span class="button-text">Add</span>
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="col-md-2"></div>
         </div>
-    </div>
-
-    <%- include('partials/footer'); %>
+</div>
+<%- include('partials/footer'); %>
