--- a/views/device.ejs
+++ b/views/device.ejs
@@ -1,27 +1,47 @@
 <%- include('partials/header'); %>
 
-    <div class="container">
-        <%- include('partials/menu'); %>
+<div class="container">
+    <%- include('partials/menu'); %>
 
-        <div class="row mt-5">
-            <div class="col-md-2"></div>
-            <div class="col-md-8 mt-3">
-                <div class="card shadow mb-5 bg-body rounded">
-                    <div class="card-header">
-                        Add new device
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <label for="device-address" class="form-label">Device address</label>
-                            <input type="text" class="form-control" id="device-address" placeholder="0xD8a12aBa14...">
-                        </div>
+    <div class="row mt-3">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 mt-3">
+            <div id="status-bar" class="alert invisible" role="alert"></div>
 
-                        <a href="#" class="btn btn-primary">Add</a>
-                    </div>
+            <div class="card shadow mb-5 bg-body rounded">
+                <div class="card-header">
+                    1. Generate key pair
+                </div>
+                <div class="card-body">
+                    <div id="keypair" class="bg-light fs-6 p-3 mb-3 text-muted fw-light"></div>
+                    <button id="generate-key-btn" class="btn btn-primary">
+                        <span class="spinner-grow spinner-grow-sm d-none" role="status"
+                            aria-hidden="true"></span>
+                        <span class="button-text">Generate</span>
+                    </button>
                 </div>
             </div>
-            <div class="col-md-2"></div>
-        </div>
-    </div>
 
-    <%- include('partials/footer'); %>
+            <div class="card shadow mb-5 bg-body rounded">
+                <div class="card-header">
+                    2. Add new device
+                </div>
+                <div class="card-body">
+                    <div class="mb-3">
+                        <label for="device-address" class="form-label">Device address</label>
+                        <input type="text" class="form-control" id="device-address" placeholder="0xD8a12aBa14...">
+                    </div>
+
+                    <button id="add-device-btn" class="btn btn-primary">
+                        <span class="spinner-grow spinner-grow-sm d-none" role="status"
+                            aria-hidden="true"></span>
+                        <span class="button-text">Add</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+
+<%- include('partials/footer'); %>
