Allow adding new devices

--- a/views/device.ejs
+++ b/views/device.ejs
@@ -10,7 +10,7 @@
 
             <div class="card shadow mb-5 bg-body rounded">
                 <div class="card-header">
-                    1. Generate key pair
+                    1. Generate new address and key
                 </div>
                 <div class="card-body">
                     <div id="keypair" class="bg-light fs-6 p-3 mb-3 text-muted fw-light"></div>
