--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -4,7 +4,7 @@
         <a href="/">Administrators</a>
     </p>
     <p>
-        <a href="/device">Devices</a>
+        <a href="/devices">Devices</a>
     </p>
     <p>
         <a href="/iot">IoT</a>
