--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,9 +18,9 @@
                         <input type="email" required class="form-control" id="email"
                             placeholder="email@example.com">
 
-                        <label for="email" class="form-label mt-3">Business</label>
+                        <label for="email" class="form-label mt-3">Supply chain link</label>
                         <select class="form-select" id="business" aria-label="Business">
-                            <option selected>Select business</option>
+                            <option selected>Select link</option>
 
                             <% businesses.forEach(function(business) { %>
                                 <option value="<%= business.id %>"><%= business.title %></option>
